// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default state 1`] = `
Object {
  "show": false,
}
`;

exports[`handles HIDE_INFO 1`] = `
Object {
  "show": false,
}
`;

exports[`handles SHOW_INFO 1`] = `
Object {
  "show": true,
}
`;
